--- a/index.html
+++ b/index.html
@@ -52,5 +52,13 @@
             </a>
         </div>
     </main>
+    <div class="attribution">
+        <div>
+            design by <a href="https://www.figma.com/@nickelfox">Nickelfox</a>
+        </div>
+        <div>
+            converted to HTML & CSS by <a href="https://github.com/AbdoArafh">AbdoArafh</a>
+        </div>
+    </div>
 </body>
 </html>
